fix: post spacing, images width 2

--- a/src/styles/base/typography/elements.css
+++ b/src/styles/base/typography/elements.css
@@ -35,6 +35,6 @@
   }
 
   img {
-    @apply pb-2
+    @apply pb-2;
   }
 }
